force-app/main/default/objects/Issue_Modifications__c/fields/Modification_Category__c.field-meta.xml
<CustomField>
    <fullName>Modification_Category__c</fullName>
    <label>Modification Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Modification_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Wage Modification</fullName>
                <default>true</default>
                <label>Wage Modification</label>
            </value>
            <value>
                <fullName>Penalty Modification</fullName>
            </value>
            <value>
                <fullName>Wage Interest Modification</fullName>
            </value>
            <value>
                <fullName>Wage Modification - Companion Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>