force-app/main/default/objects/Issue_Modifications__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>Issue modification for BOFE issue types</description>
    <label>BOFE</label>
</RecordType>