force-app/main/default/objects/Issue_Modifications__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>WCA Case issue modification</description>
    <label>WCA</label>
</RecordType>