force-app/main/default/objects/Issue_Modifications__c/validationRules/Comment_required_for_Other_Mod_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_required_for_Other_Mod_Type</fullName>
    <active>true</active>
    <description>Comment required when choosing them "Other" Modification Type.</description>
    <errorConditionFormula>( ISPICKVAL(Modification_Type__c, "Other"))&amp;&amp;(ISBLANK( Comment__c ))</errorConditionFormula>
    <errorMessage>Comment required when Modification Type is "Other".</errorMessage>
</ValidationRule>